# cryptoutils

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  configure.ps1  configure.sh
.github/workflows/: cmake-build.yml  cmake-multi-build.yml  cmake-multi-platform.yml  create-deb-installer.yml  create-win-installer.yml
cmake/: FetchCPM.cmake  FindFmt.cmake  ProjectInstaller.cmake  ProjectVersion.cmake
include/: algos.h  ec.h  elgamal.h  generators.h  rsa.h  shamir.h
installer/: ProjectInstaller.cmake
libs/: FetchCPM.cmake  ProjectLibs.cmake
src/: algos.cpp  ec.cpp  elgamal.cpp  generators.cpp  handlers.cpp  rsa.cpp  shamir.cpp
